[package]
name = "bk"
version = "0.6.0"
authors = [
  "James Campos <james.r.campos@gmail.com>",
  "Shuo Chen <leo.chen.cipher@gmail.com>",
]
edition = "2021"
license = "MIT"
description = "Terminal Epub reader"
keywords = ["ebook", "epub"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/leochencipher/bk"

[dependencies]
argh = "^0.1"
crossterm = "^0.22"
ron = "^0.7"
roxmltree = "^0.14"
serde = "^1.0"
unicode-width = "^0.2"
viuer = "^0.7.1"
image = "^0.24"

[dependencies.zip]
version = "^0.6.6"
default-features = false
features = ["deflate"]
